EXTRA_DIST = \
	iso885915.ovpn \
	password.conf \
	pkcs12.ovpn \
	port.ovpn \
	rport.ovpn \
	static.key \
	static.ovpn \
	tls.ovpn \
	tun-opts.conf \
	proxy-http.ovpn \
	httpauthfile \
	proxy-socks.ovpn \
	proxy-http-with-auth.ovpn \
	keysize.ovpn \
	device.ovpn \
	device-notype.ovpn \
	keepalive.ovpn \
	ping-with-exit.ovpn \
	ping-with-restart.ovpn \
	route.ovpn \
	tls-inline.ovpn \
	tls-inline-ca.pem \
	tls-inline-cert.pem \
	tls-inline-key.pem \
	tls-inline-ta.pem
